--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "my-notes-app",
+  "homepage": "https://marcosilvestroni.github.io/my-notes/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "deploy": "gh-pages -d dist",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -31,6 +33,7 @@
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@types/bootstrap": "^5",
+    "@types/gh-pages": "^6",
     "@types/lodash": "^4",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
@@ -38,6 +41,7 @@
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
     "globals": "^15.15.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.24.1",
